# FinchGram

./: CMakeLists.txt  README.md
.cursor/rules/: naming.mdc
src/: MainWindow.h  MainWindow.ui  main.cpp
src/utils/: Constants.cpp  Constants.h  SettingsManager.cpp  SettingsManager.h
